--- a/results-summary-component-main/index.css
+++ b/results-summary-component-main/index.css
@@ -26,6 +26,7 @@ body {
     font-family: 'HankenGrotesk';
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 /* * {
@@ -163,4 +164,50 @@ button {
     background-color: var(--dark-gray-blue);
     font-size: large;
     font-weight: 500;
+    border: none;
+}
+
+button:hover {
+    background: linear-gradient(to bottom, var(--light-slate-blue), var(--light-royal-blue));
+    cursor: pointer;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+@media screen and (min-width: 600px) {
+    body {
+        display: flex;
+        justify-content: center;
+        vertical-align: middle;
+        padding: 0;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        max-width: 90%;
+        width: 600px;
+
+        border-radius: 25px;
+        -webkit-box-shadow: 2px 0px 18px -6px rgba(0,0,0,0.75);
+        -moz-box-shadow: 2px 0px 18px -6px rgba(0,0,0,0.75);
+        box-shadow: 2px 0px 18px -6px rgba(0,0,0,0.75);
+        overflow: hidden;
+    }
+
+    main {
+        width: 50%;
+        height: 100%;
+    }
+
+    header {
+        width: 50%;
+        margin: 0;
+        border-radius: 0 25px 25px 0;
+    }
 }
