--- a/password-generator-app/src/components/Checkbox/Checbox.module.css
+++ b/password-generator-app/src/components/Checkbox/Checbox.module.css
@@ -22,6 +22,10 @@
     cursor: pointer;
 }
 
+.container p {
+    color: var(--light-gray);
+}
+
 .clicked {
     border: none;
     background-color: var(--light-green);
